# hignn

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Manual.md  Readme.md  convert.py  hignn.cpp  prerequisites.sh  prerequisties.sh  workflow.sh
Result/: pos0rank0.h5  pos1rank0.h5  vel0rank0.h5  vel1rank0.h5
include/: HignnModel.hpp  NeighborLists.hpp  PointCloudSearch.hpp  PotentialForce.hpp  Quaternion.hpp  ThreeBodyEdge.hpp  TimeIntegrator.hpp  TwoBodyNet.hpp  Typedef.hpp  Vec3.hpp  hignn.hpp  nanoflann.hpp
interface/: HignnInterface.cpp
nn/: 3D_force_UB_max600_try2.pkl
pyThreeBodyEdgeInfo/: Edge_Morse.py  Edge_construction_transfer.py  Makefile  Morse_force.py  Readme.md  cmake_install.cmake  data_generater.py  example.py  example2.py  install.md  kokkos_interface.hpp  main.py  neighbor_lists.hpp  pyBodyEdgeInfo.cpp  test2.py  test_edge_info.py
pyThreeBodyEdgeInfo/.cache/clangd/index/: attr.h.9E7322D361EB8BA0.idx  buffer_info.h.82D2CECE145DFB7C.idx  cast.h.FD6C38DBD4C87B34.idx  class.h.1AD8979A8D6A25D5.idx  common.h.3ED8745ECECF7B12.idx  complex.h.8AF58D41DCB88AF0.idx  descr.h.EFBCB0CF1CD78E6F.idx  functional.h.DDD89ED689CB7240.idx  gil.h.9CC39A90424B0CAD.idx  init.h.40247118ED294779.idx  internals.h.60BBA40946F2F498.idx  kokkos_interface.hpp.5CF8E44E33E3A291.idx  neighbor_lists.hpp.ADB14592E49DC5C8.idx  numpy.h.635B730C1CF9F2DD.idx  options.h.A9E6A36E2FA39AF0.idx  pyBodyEdgeInfo.cpp.A268B05A912FC1EE.idx  pybind11.h.1BFA1A493901AAFF.idx  pytypes.h.F07E29C675CBAAC8.idx  stl.h.59D1B48910E73865.idx  type_caster_base.h.63CCC405C42C639D.idx  typeid.h.02FB22762E061D4E.idx
pyTimeIntegrator/: example.py  pyTimeIntegrator.cpp  quaternion.hpp  setup.py  time_integrator.hpp  vec3.hpp
python/: convert.py  example.py  gravity_field.py  init.py  morse_potential.py  neighbor_lists.py
script/: Dockerfile.hignn  Dockerfile.hignn.AdaLovelace  Dockerfile.hignn.Amprere  common.focal.sh  dependencies.focal.nvidia.sh  dependencies.focal.sh  example.sh
src/: Build.cpp  CloseDot.cpp  CloseFarCheck.cpp  DenseDot.cpp  FarDot.cpp  HignnModel.cpp  PostCheck.cpp  PostCheckDot.cpp  TwoBodyNet.cpp  hignn.cpp
